--- a/FreeCodeCamp/Tribute/styles/main.css
+++ b/FreeCodeCamp/Tribute/styles/main.css
@@ -11,13 +11,13 @@
     padding: 20px 0;
 }
 #main{
-    background:#EEE;
+    background: lightblue;
 }
 
 #img-div{
     display: flex;
     flex-wrap: wrap;
-    padding: 20px 30px;
+    padding: 25px 25px;
     justify-content: center;
 }
 #img-div img{
@@ -26,6 +26,28 @@
     max-width: 100%;
     border: white 5px solid;
     max-height: 450px;
+}
+
+/* Style the top navigation bar */
+.navbar {
+display: flex;
+ position: sticky;
+ top: 0;
+ background-color: transparent;
+}
+
+/* Style the navigation bar links */
+.navbar a {
+    color: rebeccapurple;
+    padding:10px 50px;
+  text-decoration: none;
+  text-align: center;
+}
+
+/* Change color on hover */
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
 }
 
 #img-caption{
@@ -43,19 +65,19 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 25px;
+    padding-right: 25px;
     padding-bottom: 20px;
     column-gap: 20px;
     row-gap: 20px;
 }
 
 #tribute-info>div{
-    width: 45%;
+    width: 100%;
     background:white;
 }
 
-#time-line, #quotes{
+#freedomstruggle, #quotes{
     background-color: white;
     padding: 30px 20px;
 }
@@ -65,13 +87,55 @@
     color: rebeccapurple;
 }
 
+#freedomstruggle h1{
+    text-align: center;
+    color: rebeccapurple;
+}
+#passing-away h1{
+    text-align: center;
+    color: rebeccapurple;
+}
+#collage{
+  width: 90%;
+  height: auto;
+  max-width: 100%;
+  border: white 5px solid;
+  max-height: 450px;
+  padding-left: 50px;
+  padding-right: 10px;
+  padding-bottom: 20px;
+}
+
+#image1{
+  width:250px;
+  height:240px;
+  padding:20px;
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+}
+.pictures{
+  position:relative;
+}
+.text-block{
+  width:100%;
+  position:absolute;
+  top:0;
+  text-align: center;
+  color: rebeccapurple;
+
+}
 
 #quotes h1{
     text-align: center;
     color: rebeccapurple;
 }
+p{
+  text-align: center;
+  color: rebeccapurple
+}
 
-#tribute-info li{
+
+   #tribute-info li{
     list-style: none;
     text-align: center;
     display: flex;
@@ -92,7 +156,7 @@
 .list-style::after{
     content: "";
     width: 10px;
-    height: 130px;
+    height: 100px;
     background-color: rebeccapurple;
     display: inline-block;
     position: absolute;
@@ -148,6 +212,24 @@
     text-decoration: none;
 }
 
+#passing-away{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 25px 25px;
+
+}
+#image2{
+  width: 70%;
+  border: white 5px solid;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  border: white 5px solid;
+  max-height: 450px;
+
+}
+
 
 @media(max-width: 768px){
     #tribute-info > div{
@@ -181,4 +263,7 @@
         width: 35px;
         height: 35px;
     }
+}
+
+
 }
