--- a/FreeCodeCamp/Tribute/styles/main.css
+++ b/FreeCodeCamp/Tribute/styles/main.css
@@ -1,18 +1,53 @@
 *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
+html{
+  width:100%;
+}
+body{
+  width: 100%;
+  padding: 0 100px 50px;
+
+}
+#main{
+  width:100%;
+}
+
+/* Style the top navigation bar */
+ .main .navbar {
+display: flex;
+justify-content: center;
+align-items: center;
+ width: 100%;
+ height: 50px;
+ position: fixed;
+ top: 0px;
+ left:0;
+ background-color: lightblue;
+ z-index: 10000;
+}
+
+
+section .main{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  }
+
+
+
 #title{
-    position: relative;
+    margin-top: 50px;
     text-align: center;
     bottom: 0;
     color: rebeccapurple;
     background-color: white;
     padding: 20px 0;
 }
-#main{
-    background: lightblue;
-}
+
 
 #img-div{
     display: flex;
@@ -28,18 +63,24 @@
     max-height: 450px;
 }
 
-/* Style the top navigation bar */
-.navbar {
-display: flex;
- position: sticky;
- top: 0;
- background-color: transparent;
+
+.navbar ul {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  align-items: center;
+
+}
+
+.navbar ul li {
+  list-style: none;
+
 }
 
 /* Style the navigation bar links */
 .navbar a {
     color: rebeccapurple;
-    padding:10px 50px;
+    padding:0 20px;
   text-decoration: none;
   text-align: center;
 }
@@ -61,6 +102,8 @@ display: flex;
 }
 
 #tribute-info{
+  position: relative;
+  z-index: 1;
     height: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -70,6 +113,7 @@ display: flex;
     padding-bottom: 20px;
     column-gap: 20px;
     row-gap: 20px;
+
 }
 
 #tribute-info>div{
